Fixed slidermodal child spacing bug

--- a/src/components/SliderModal/SliderModal.module.scss
+++ b/src/components/SliderModal/SliderModal.module.scss
@@ -31,7 +31,7 @@
         background-color: $backgroundPrimary-color;
 
         .layoutWrapper {
-            position: 'relative';
+            position: relative;
             display: grid;
             overflow: hidden;
             width: 100%;
@@ -67,10 +67,11 @@
             }
 
             .modalFooter {
-                height: 45px;
-                margin: 0 15px;
+                width: 100%;
+                height: 65px;
+                padding: 0 15px;
 
-                @include flex(center, flex-end, $gap: 10px);
+                @include flex(center, flex-end, $gap: 15px);
             }
         }
     }
